--- a/index.html
+++ b/index.html
@@ -7,17 +7,49 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="css/styles.css" type="text/css" rel="stylesheet">
-    <title>Pizza caffe</title>
+    <title>PAZZI PER LA PIZZA</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="jumbotron">
-            <h1><strong></strong></h1>
-        </div>
+        <h1><b>PAZZI PER LA PIZZA</b></h1>
+        <ul>
+            <li><a href="#menu">MENU</a></li>
+            <li><a href="#order">ORDER</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="#contact">CONTACT US</a></li>
+        </ul>
     </div>
-<script src="js/jquery-3.4.1.js"></script>
-<script src="js/scripts.js"></script>
+    <div id="menu">
+        <div class="card">
+            <img src="images/pizza1.jpg" alt="Meat lovers pizza" width=10em>
+          <div class="container">
+              <p>Ham,mushroom,sausages,red pepper and green pepper</p>
+               <form>
+            <select>
+                        <option value="crust">Crust</option>
+                        <option value="size">Size</option>
+                        <option value="toppings">Toppings</option>
+                        <option value="extra toppings">Extra toppings</option>
+                    </select>
+                </form>
+          </div>
+        </div>
+        <div class="card">
+            <img src="images/pizza2.jpg" alt="Cheesy pizza">
+        </div>
+        <div class="card">
+            <img src="images/pizza3.jpg" alt="Hawaiann pizza">
+        </div>
+        <div class="card">
+            <img src="images/pizza4.png" alt="Magharitta pizza">
+        </div>
+
+
+    </div>
+    </div>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
