add option values

--- a/index.html
+++ b/index.html
@@ -14,29 +14,30 @@
     <div class="container">
         <h1><b>PAZZI PER LA PIZZA</b></h1>
         <ul>
-            <li><a href="#menu">MENU</a></li>
-            <li><a href="#order">ORDER</a></li>
+            <li><a href="menu.html">MENU</a></li>
+            <li><a href="order.html">ORDER</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="#contact">CONTACT US</a></li>
         </ul>
     </div>
-    <div id="menu">
+
         <div class="card">
-            <img src="images/pizza1.jpg" alt="Meat lovers pizza" width=10em>
-          <div class="container">
+            <img src="images/pizza1.jpg" alt="Meat lovers pizza">
+          <div class="card-body">
               <p>Ham,mushroom,sausages,red pepper and green pepper</p>
                <form>
             <select>
-                        <option value="crust">Crust</option>
-                        <option value="size">Size</option>
-                        <option value="toppings">Toppings</option>
-                        <option value="extra toppings">Extra toppings</option>
+                        <option value="small">Small</option>
+                        <option value="medium">Medium</option>
+                        <option value="large">Large</option>
                     </select>
                 </form>
           </div>
         </div>
+        </div>
         <div class="card">
-            <img src="images/pizza2.jpg" alt="Cheesy pizza">
+            <img src="images/pizza2.jpg" alt="Vegan pizza">
+            
         </div>
         <div class="card">
             <img src="images/pizza3.jpg" alt="Hawaiann pizza">
