--- a/index.html
+++ b/index.html
@@ -14,43 +14,159 @@
     <div class="container">
         <h1><b>PAZZI PER LA PIZZA</b></h1>
         <ul>
-            <li><a href="menu.html">MENU</a></li>
-            <li><a href="order.html">ORDER</a></li>
-            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="#menu">MENU</a></li>
+            <li><a href="#order">ORDER</a></li>
+            <li><a href="">ABOUT</a></li>
             <li><a href="#contact">CONTACT US</a></li>
         </ul>
-    </div>
+    </div><br><br><br><br>
+    <div class="container-fluid">
+        <div id="menu">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="card" class="card-img-top">
+                        <img src="images/pizza1.jpg" alt="Meat lovers pizza" class="mx-auto w-100">
+                        <div class="card-body">
+                            <p>Ham,mushroom,sausages,red pepper and green pepper</p>
+                            <form>
+                                <select class="form-control" placeholder="choose size">
+                                    <option value="">Choose size</option>
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                                <div class="card-body">
+                                    <form>
+                                        <select class="form-control" placeholder="Choose crust">
+                                            <option value="">Choose crust</option>
+                                            <option value="crispy">Crispy</option>
+                                            <option value="gluten free">Gluten free</option>
+                                            <option value="stuffed">Stuffed</option>
+                                        </select>
+                                    </form>
+                                </div>
+                                <div class="card-body">
+                                    <form>
+                                        <select class="form-control" placeholder="Extra toppings">
+                                            <option value="">Choose extra toppings</option>
+                                            <option value="">Extra cheese</option>
+                                            <option value="Bacon">Bacon</option>
+                                            <option value="pepper">pepper</option>
+                                        </select>
+                                    </form>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="images/pizza2.jpg" alt="Vegan pizza" class="mx-auto w-100">
+                    <div class="card-body">
+                        <p></p>
+                        <form>
+                            <select class="form-control" placeholder="choose size">
+                                <option value="">Choose size</option>
+                                <option value="small">Small</option>
+                                <option value="medium">Medium</option>
+                                <option value="large">Large</option>
+                            </select>
+                            <form>
+                                <select class="form-control" placeholder="Choose crust">
+                                    <option value="">Choose crust</option>
+                                    <option value="crispy">Crispy</option>
+                                    <option value="gluten free">Gluten free</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </form>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <select class="form-control" placeholder="Extra toppings">
+                                <option value="">Choose extra toppings</option>
+                                <option value="">Extra cheese</option>
+                                <option value="Bacon">Bacon</option>
+                                <option value="pepper">pepper</option>
+                            </select>
+                        </form>
+                    </div>
+                    </form>
+                </div>
+                <div class="card">
+                    <img src="images/pizza3.jpg" alt="Hawaiann pizza" class="mx-auto w-100">
+                    <div class="card-body">
+                        <p>Ham,mushroom,sausages,red pepper and green pepper</p>
+                        <form>
+                            <select class="form-control" placeholder="choose size">
+                                <option value="">Choose size</option>
+                                <option value="small">Small</option>
+                                <option value="medium">Medium</option>
+                                <option value="large">Large</option>
+                            </select>
+                            <div class="card-body">
+                                <form>
+                                    <select class="form-control" placeholder="Choose crust">
+                                        <option value="">Choose crust</option>
+                                        <option value="crispy">Crispy</option>
+                                        <option value="gluten free">Gluten free</option>
+                                        <option value="stuffed">Stuffed</option>
+                                    </select>
+                                </form>
+                            </div>
+                            <div class="card-body">
+                                <form>
+                                    <select class="form-control" placeholder="Extra toppings">
+                                        <option value="">Choose extra toppings</option>
+                                        <option value="">Extra cheese</option>
+                                        <option value="Bacon">Bacon</option>
+                                        <option value="pepper">pepper</option>
+                                    </select>
+                                </form>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="card">
+                        <img src="images/pizza4.png" alt="Magharitta pizza" class="mx-auto w-100">
+                        <div class="card-body">
+                            <p>Ham,mushroom,sausages,red pepper and green pepper</p>
+                            <form>
+                                <select class="form-control" placeholder="choose size">
+                                    <option value="">Choose size</option>
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                                <div class="card-body">
+                                    <form>
+                                        <select class="form-control" placeholder="Choose crust">
+                                            <option value="">Choose crust</option>
+                                            <option value="crispy">Crispy</option>
+                                            <option value="gluten free">Gluten free</option>
+                                            <option value="stuffed">Stuffed</option>
+                                        </select>
+                                    </form>
+                                </div>
+                                <div class="card-body">
+                                    <form>
+                                        <select class="form-control" placeholder="Extra toppings">
+                                            <option value="">Choose extra toppings</option>
+                                            <option value="">Extra cheese</option>
+                                            <option value="Bacon">Bacon</option>
+                                            <option value="pepper">pepper</option>
+                                        </select>
+                                    </form>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
 
-        <div class="card">
-            <img src="images/pizza1.jpg" alt="Meat lovers pizza">
-          <div class="card-body">
-              <p>Ham,mushroom,sausages,red pepper and green pepper</p>
-               <form>
-            <select>
-                        <option value="small">Small</option>
-                        <option value="medium">Medium</option>
-                        <option value="large">Large</option>
-                    </select>
-                </form>
-          </div>
-        </div>
-        </div>
-        <div class="card">
-            <img src="images/pizza2.jpg" alt="Vegan pizza">
-            
-        </div>
-        <div class="card">
-            <img src="images/pizza3.jpg" alt="Hawaiann pizza">
-        </div>
-        <div class="card">
-            <img src="images/pizza4.png" alt="Magharitta pizza">
-        </div>
+            </div>
 
-
-    </div>
-    </div>
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/scripts.js"></script>
+                    </div>
+                </div>
+                <script src="js/jquery-3.4.1.js"></script>
+                <script src="js/scripts.js"></script>
 </body>
 
 </html>
