--- a/index.html
+++ b/index.html
@@ -23,9 +23,73 @@
     <div class="container-fluid">
         <div id="menu">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 col-lg-2 col-sm-1 p-1 mx-auto">
                     <div class="card" class="card-img-top">
                         <img src="images/pizza1.jpg" alt="Meat lovers pizza" class="mx-auto w-100">
+                        <div class="card-body">
+                            <p>Meat lovers pizza is made up of Ham,mushroom,sausages,red pepper and green pepper</p>
+                            <form>
+                                <select class="form-control" placeholder="choose size">
+                                    <option value="">Choose size</option>
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </form> <br>
+                            <form>
+                                <select class="form-control" placeholder="Choose crust">
+                                    <option value="">Choose crust</option>
+                                    <option value="crispy">Crispy</option>
+                                    <option value="gluten free">Gluten free</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </form> <br>
+                            <form>
+                                <select class="form-control" placeholder="Extra toppings">
+                                    <option value="">Choose extra toppings</option>
+                                    <option value="">Extra cheese</option>
+                                    <option value="Bacon">Bacon</option>
+                                    <option value="pepper">pepper</option>
+                                </select>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-2 p-1 mx-auto">
+                    <div class="card">
+                        <img src="images/pizza2.jpg" alt="Vegan pizza" class="mx-auto w-100">
+                        <div class="card-body">
+                            <p></p>
+                            <form>
+                                <select class="form-control" placeholder="choose size">
+                                    <option value="">Choose size</option>
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </form> <br>
+                                <form>
+                                    <select class="form-control" placeholder="Choose crust">
+                                        <option value="">Choose crust</option>
+                                        <option value="crispy">Crispy</option>
+                                        <option value="gluten free">Gluten free</option>
+                                        <option value="stuffed">Stuffed</option>
+                                    </select>
+                                </form> <br>
+                                <form>
+                                    <select class="form-control" placeholder="Extra toppings">
+                                        <option value="">Choose extra toppings</option>
+                                        <option value="">Extra cheese</option>
+                                        <option value="Bacon">Bacon</option>
+                                        <option value="pepper">pepper</option>
+                                    </select>
+                                </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-2 p-1 mx-auto">
+                    <div class="card">
+                        <img src="images/pizza3.jpg" alt="Hawaiann pizza" class="mx-auto w-100">
                         <div class="card-body">
                             <p>Ham,mushroom,sausages,red pepper and green pepper</p>
                             <form>
@@ -35,42 +99,7 @@
                                     <option value="medium">Medium</option>
                                     <option value="large">Large</option>
                                 </select>
-                                <div class="card-body">
-                                    <form>
-                                        <select class="form-control" placeholder="Choose crust">
-                                            <option value="">Choose crust</option>
-                                            <option value="crispy">Crispy</option>
-                                            <option value="gluten free">Gluten free</option>
-                                            <option value="stuffed">Stuffed</option>
-                                        </select>
-                                    </form>
-                                </div>
-                                <div class="card-body">
-                                    <form>
-                                        <select class="form-control" placeholder="Extra toppings">
-                                            <option value="">Choose extra toppings</option>
-                                            <option value="">Extra cheese</option>
-                                            <option value="Bacon">Bacon</option>
-                                            <option value="pepper">pepper</option>
-                                        </select>
-                                    </form>
-                                </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="images/pizza2.jpg" alt="Vegan pizza" class="mx-auto w-100">
-                    <div class="card-body">
-                        <p></p>
-                        <form>
-                            <select class="form-control" placeholder="choose size">
-                                <option value="">Choose size</option>
-                                <option value="small">Small</option>
-                                <option value="medium">Medium</option>
-                                <option value="large">Large</option>
-                            </select>
+                            </form> <br>
                             <form>
                                 <select class="form-control" placeholder="Choose crust">
                                     <option value="">Choose crust</option>
@@ -78,22 +107,21 @@
                                     <option value="gluten free">Gluten free</option>
                                     <option value="stuffed">Stuffed</option>
                                 </select>
+                            </form> <br>
+                            <form>
+                                <select class="form-control" placeholder="Extra toppings">
+                                    <option value="">Choose extra toppings</option>
+                                    <option value="">Extra cheese</option>
+                                    <option value="Bacon">Bacon</option>
+                                    <option value="pepper">pepper</option>
+                                </select>
                             </form>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <form>
-                            <select class="form-control" placeholder="Extra toppings">
-                                <option value="">Choose extra toppings</option>
-                                <option value="">Extra cheese</option>
-                                <option value="Bacon">Bacon</option>
-                                <option value="pepper">pepper</option>
-                            </select>
-                        </form>
-                    </div>
-                    </form>
                 </div>
+                 <div class="col-md-3 col-lg-3 col-sm-2 p-1 mx-auto">
                 <div class="card">
-                    <img src="images/pizza3.jpg" alt="Hawaiann pizza" class="mx-auto w-100">
+                    <img src="images/pizza4.png" alt="Magharitta pizza" class="mx-auto w-100">
                     <div class="card-body">
                         <p>Ham,mushroom,sausages,red pepper and green pepper</p>
                         <form>
@@ -103,70 +131,34 @@
                                 <option value="medium">Medium</option>
                                 <option value="large">Large</option>
                             </select>
-                            <div class="card-body">
-                                <form>
-                                    <select class="form-control" placeholder="Choose crust">
-                                        <option value="">Choose crust</option>
-                                        <option value="crispy">Crispy</option>
-                                        <option value="gluten free">Gluten free</option>
-                                        <option value="stuffed">Stuffed</option>
-                                    </select>
-                                </form>
-                            </div>
-                            <div class="card-body">
-                                <form>
-                                    <select class="form-control" placeholder="Extra toppings">
-                                        <option value="">Choose extra toppings</option>
-                                        <option value="">Extra cheese</option>
-                                        <option value="Bacon">Bacon</option>
-                                        <option value="pepper">pepper</option>
-                                    </select>
-                                </form>
-                            </div>
                         </form>
-                    </div>
-                    <div class="card">
-                        <img src="images/pizza4.png" alt="Magharitta pizza" class="mx-auto w-100">
-                        <div class="card-body">
-                            <p>Ham,mushroom,sausages,red pepper and green pepper</p>
+                        <br>
                             <form>
-                                <select class="form-control" placeholder="choose size">
-                                    <option value="">Choose size</option>
-                                    <option value="small">Small</option>
-                                    <option value="medium">Medium</option>
-                                    <option value="large">Large</option>
+                                <select class="form-control" placeholder="Choose crust">
+                                    <option value="">Choose crust</option>
+                                    <option value="crispy">Crispy</option>
+                                    <option value="gluten free">Gluten free</option>
+                                    <option value="stuffed">Stuffed</option>
                                 </select>
-                                <div class="card-body">
-                                    <form>
-                                        <select class="form-control" placeholder="Choose crust">
-                                            <option value="">Choose crust</option>
-                                            <option value="crispy">Crispy</option>
-                                            <option value="gluten free">Gluten free</option>
-                                            <option value="stuffed">Stuffed</option>
-                                        </select>
-                                    </form>
-                                </div>
-                                <div class="card-body">
-                                    <form>
-                                        <select class="form-control" placeholder="Extra toppings">
-                                            <option value="">Choose extra toppings</option>
-                                            <option value="">Extra cheese</option>
-                                            <option value="Bacon">Bacon</option>
-                                            <option value="pepper">pepper</option>
-                                        </select>
-                                    </form>
-                                </div>
                             </form>
-                        </div>
+                            <br>
+                            <form>
+                                <select class="form-control" placeholder="Extra toppings">
+                                    <option value="">Choose extra toppings</option>
+                                    <option value="">Extra cheese</option>
+                                    <option value="Bacon">Bacon</option>
+                                    <option value="pepper">pepper</option>
+                                </select>
+                            </form>
                     </div>
                 </div>
-
             </div>
+        </div>
+    </div>
+    </div>
 
-                    </div>
-                </div>
-                <script src="js/jquery-3.4.1.js"></script>
-                <script src="js/scripts.js"></script>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
