add paragraphs to index

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                     <div class="card" class="card-img-top">
                         <img src="images/pizza1.jpg" alt="Meat lovers pizza" class="mx-auto w-100">
                         <div class="card-body">
-                            <p>Meat lovers pizza is made up of Ham,mushroom,sausages,red pepper and green pepper</p>
+                            <p style="font-size: 1.5rem;"><strong>Meat Lovers</strong></p>
+                            <p>Smoked Ham, Ground Beef, Pepperoni, Italian Sausage and Chicken</p>
+                            <p class="order"><b>ORDER!!!</b></p>
                             <form>
                                 <select class="form-control" placeholder="choose size">
                                     <option value="">Choose size</option>
@@ -51,6 +53,7 @@
                                     <option value="Bacon">Bacon</option>
                                     <option value="pepper">pepper</option>
                                 </select>
+                                <input type="b" value="" placeholder="Proceed to pay">
                             </form>
                         </div>
                     </div>
@@ -59,39 +62,10 @@
                     <div class="card">
                         <img src="images/pizza2.jpg" alt="Vegan pizza" class="mx-auto w-100">
                         <div class="card-body">
-                            <p></p>
-                            <form>
-                                <select class="form-control" placeholder="choose size">
-                                    <option value="">Choose size</option>
-                                    <option value="small">Small</option>
-                                    <option value="medium">Medium</option>
-                                    <option value="large">Large</option>
-                                </select>
-                            </form> <br>
-                                <form>
-                                    <select class="form-control" placeholder="Choose crust">
-                                        <option value="">Choose crust</option>
-                                        <option value="crispy">Crispy</option>
-                                        <option value="gluten free">Gluten free</option>
-                                        <option value="stuffed">Stuffed</option>
-                                    </select>
-                                </form> <br>
-                                <form>
-                                    <select class="form-control" placeholder="Extra toppings">
-                                        <option value="">Choose extra toppings</option>
-                                        <option value="">Extra cheese</option>
-                                        <option value="Bacon">Bacon</option>
-                                        <option value="pepper">pepper</option>
-                                    </select>
-                                </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-lg-3 col-sm-2 p-1 mx-auto">
-                    <div class="card">
-                        <img src="images/pizza3.jpg" alt="Hawaiann pizza" class="mx-auto w-100">
-                        <div class="card-body">
-                            <p>Ham,mushroom,sausages,red pepper and green pepper</p>
+                            <p style="font-size: 1.5rem;"><strong>Vegan</strong></p>
+                            <p>Corn, Cherry Tomatoes, Brocolli, Garlic, Jalapeno and Basil, garnished with Cashew Cream
+                            </p>
+                            <p class="order"><b>ORDER!!!</b></p>
                             <form>
                                 <select class="form-control" placeholder="choose size">
                                     <option value="">Choose size</option>
@@ -119,20 +93,58 @@
                         </div>
                     </div>
                 </div>
-                 <div class="col-md-3 col-lg-3 col-sm-2 p-1 mx-auto">
-                <div class="card">
-                    <img src="images/pizza4.png" alt="Magharitta pizza" class="mx-auto w-100">
-                    <div class="card-body">
-                        <p>Ham,mushroom,sausages,red pepper and green pepper</p>
-                        <form>
-                            <select class="form-control" placeholder="choose size">
-                                <option value="">Choose size</option>
-                                <option value="small">Small</option>
-                                <option value="medium">Medium</option>
-                                <option value="large">Large</option>
-                            </select>
-                        </form>
-                        <br>
+                <div class="col-md-3 col-lg-3 col-sm-2 p-1 mx-auto">
+                    <div class="card">
+                        <img src="images/pizza3.jpg" alt="Hawaiian pizza" class="mx-auto w-100">
+                        <div class="card-body">
+                            <p style="font-size: 1.5rem;"><strong>Hawaiian Pizza</strong></p>
+                            <p>Shredded Ham,Mozarella and Pineapple</p>
+                            <p class="order"><b>ORDER!!!</b></p>
+                            <form>
+                                <select id="xx" class="form-control" placeholder="choose size">
+                                    <option value="">Choose size</option>
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </form> <br>
+                            <form>
+                                <select class="form-control" placeholder="Choose crust">
+                                    <option value="">Choose crust</option>
+                                    <option value="crispy">Crispy</option>
+                                    <option value="gluten free">Gluten free</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </form> <br>
+                            <form>
+                                <select class="form-control" placeholder="Extra toppings">
+                                    <option value="">Choose extra toppings</option>
+                                    <option value="">Extra cheese</option>
+                                    <option value="Bacon">Bacon</option>
+                                    <option value="pepper">pepper</option>
+                                </select>
+                                <button type="button" id="o"></button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-2 p-1 mx-auto">
+                    <div class="card">
+                        <img src="images/pizza4.png" alt="Mediterranean lamb" class="mx-auto w-100">
+                        <div class="card-body">
+                            <p style="font-size: 1.5rem;"><strong>Mediterranean Pizza</strong></p>
+                            <p>House Cooked Lamb roasted in Mediterranean spices, Tomatoes, Red Onions,Tomatoes, Feta
+                                and Oregano on yourchoice of base, garnished with Mint Yoghurt and Lemon wedge.</p>
+                            <p class="order"><b>ORDER!!!</b></p>
+                            <form>
+                                <select class="form-control" placeholder="choose size">
+                                    <option value="">Choose size</option>
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </form>
+                            <br>
                             <form>
                                 <select class="form-control" placeholder="Choose crust">
                                     <option value="">Choose crust</option>
@@ -150,11 +162,35 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                             </form>
+                        </div>
                     </div>
-                </div>
+            </div>
             </div>
         </div>
-    </div>
+        <div id="pick-del">
+                <p>Would you prefer pickup or delivery?</p>
+                <form>
+
+        
+                                <input id="option2" name="options" type="radio">Pick up
+                                </label>
+                                <div class="visible-pickup">
+                                        <div id="places-autocomplete-wrap">
+                                        <input class="form-control gtm-form-checkout" id="places-autocomplete" placeholder="Enter your location" type="search" autocomplete="off">
+                                        </div>
+                </form>
+                <p></p>
+            </div>
+            <h3><strong>CONTACT US</strong></h3>
+            <p>E-MAIL</p>
+            <p>@murimimaureen8@gmail.com</p><hr>
+            <p>TELEPHONE</p>
+            <p>0799280333</p>
+            <hr>
+            <p>VISIT</p>
+            <p>NGONG-LANE PLAZA</p>
+            <P>NGONG,NAIROBI</P>
+
     </div>
 
     <script src="js/jquery-3.4.1.js"></script>
