--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 <body>
     <div class="container">
         <h1><b>PAZZI PER LA PIZZA</b></h1>
+        <p>PIZZACHU</p>
+        <img class="back" src="images/logo.jpg" alt="Pizza making">
+        <p>I CHEESE YOU</p>
         <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="menu.html">MENU</a></li>
-            <li><a href="contact.html">CONTACT US</a></li>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#menu">MENU</a></li>
+            <li><a href="#contact">CONTACT US</a></li>
         </ul>
     </div><br><br><br><br>
     <div class="container-fluid">
@@ -223,7 +226,7 @@
                     <p>VISIT</p>
                     <p>MARKET MANSION</p>
                     <P>00200,NAIROBI</P>
-                    <p>Follow us on <i class="fab fa-instagram"></i></p>
+                    <img src="images/visit.jpg" alt="Visit store Location at Market Mansion">
                 </div>
             </div>
         </div>
