redo js scripts

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 <body>
     <div class="container">
         <h1><b>PAZZI PER LA PIZZA</b></h1>
-        <div class="dropdown">
+        <div class="background">
         <p style="text-align: center;"><strong>PIZZACHU</strong></p>
-        <div class="dropdown-img">
         <img src="images/pizza.jpg" alt="Pizza making" width="1100vh">
     </div>
         <p style="text-align: center;"><strong>I CHEESE YOU</strong></p>
